# ai-solutions-engineering-starter-kit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  cookiecutter.json  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{cookiecutter.project_slug}}/.github/workflows/: lint.yml  tests.yml
{{cookiecutter.project_slug}}/app/: __init__.py  config.py  logging_config.py  main.py  schemas.py
{{cookiecutter.project_slug}}/app/api/: health.py  routes.py
{{cookiecutter.project_slug}}/app/services/: embedding_service.py  evaluation_service.py  foundation_service.py  llm_service.py  (+1 more)
{{cookiecutter.project_slug}}/checklists/: ai-design-review.md  deployment-readiness.md  evaluation-readiness.md  portfolio-readiness.md  project-kickoff.md  security-review.md
{{cookiecutter.project_slug}}/diagrams/: agent-flow.md  api-sequence.md  rag-flow.md  system-architecture.md  user-workflow.md
{{cookiecutter.project_slug}}/docs/: 01-discovery.md  02-problem-definition.md  03-requirements.md  04-user-stories.md  05-solution-design.md  06-architecture.md  07-evaluation-plan.md  08-risk-privacy-cost.md  09-deployment-plan.md  10-results.md  11-reflection.md
{{cookiecutter.project_slug}}/evaluation/: README.md  dataset.example.json  metrics.py  run_evaluation.py
{{cookiecutter.project_slug}}/prompts/: classification-prompt.md  evaluation-prompt.md  extraction-prompt.md  rag-answer-prompt.md  system-prompt.md
{{cookiecutter.project_slug}}/scripts/: ingest_documents.py  run_local.sh  setup_project.py
{{cookiecutter.project_slug}}/tests/: test_foundation_service.py  test_health.py  test_schemas.py  test_services.py
{{cookiecutter.project_slug}}/ui/: streamlit_app.py
(+14 files in other folders)
