[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-solutions-engineering-starter-kit"
version = "0.1.0"
description = "Cookiecutter template for practical AI solutions engineering projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["cookiecutter>=2.6.0"]

[project.optional-dependencies]
development = ["ruff>=0.5.0"]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["{{cookiecutter.project_slug}}"]
