[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
license = { text = "{{ cookiecutter.license }}" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
local-llm = []
embeddings = []
vector-search = []
foundation = [{% if cookiecutter.depends_on_foundation == "yes" %}"{{ cookiecutter.foundation_package_name }} @ git+{{ cookiecutter.foundation_git_url }}@{{ cookiecutter.foundation_version_tag }}"{% endif %}]
development = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
ignore_missing_imports = true
